# rust-web

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
configs/: config.toml
doc/: 01web框架.md  02数据库.md  03config.md  04log.md  05线程池.md  06kafka.md  07redis.md  08docker.md  redis.md
src/: config.rs  db.rs  log_config.rs  main.rs
src/api/: mod.rs  user.rs
src/middleware/: auth.rs  kafka.rs  mod.rs  redis_client.rs  timed.rs
