[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.2", optional = true }
actix-web = "4"
futures = { version = "*" }
futures-util = "0.3"


sqlx = { version = "0.7.2", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "chrono",
] }


# rbatis
rbs = { version = "4.3" }
rbatis = { version = "4.3" }
rbdc-mysql = { version = "4.3" }


lazy_static = { version = "1.4"}

toml = "0.8.8"
# config = "0.13.1"


log = "0.4"


#env_logger = "0.10"

# tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter", "time", "local-time", ] }
time = { version = "0.3.7", features = ["macros"] }
tracing-appender = "0.2.3"
# fern
#fern = "0.6.1"
dotenv = "0.15.0"
chrono = "0.4"
rayon = "1.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

#rdkafka = {version = "0.36.0", features = ["tokio"]}
simple-kafka = "0.0.8"